--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -26,4 +26,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: win-exe
-        path: dist/image2pdf/image2pdf.exe
+        path: dist/image2pdf.exe
